Fix map selection mode

--- a/plugins/gameserver/gamemanager.yml
+++ b/plugins/gameserver/gamemanager.yml
@@ -29,7 +29,7 @@ chat:
 component-configs:
   project-ares:
     maps:
-      selection-mode: auto
+      selection-mode: random
       libraries:
         - path: /maps
           ignored-directories: []
