Fix some server props

--- a/servers/games/server.properties
+++ b/servers/games/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
 #Sat Mar 30 19:38:48 CDT 2019
-spawn-protection=16
+spawn-protection=0
 generator-settings=
 force-gamemode=false
 allow-nether=true
@@ -25,9 +25,9 @@ server-port=25565
 debug=false
 server-ip=
 spawn-npcs=true
-allow-flight=false
+allow-flight=true
 level-name=world
-view-distance=10
+view-distance=7
 resource-pack=
 spawn-animals=true
 white-list=false
