Update mobspawn and motd

--- a/servers/generator/server.properties
+++ b/servers/generator/server.properties
@@ -29,11 +29,11 @@ allow-flight=true
 level-name=world
 view-distance=10
 resource-pack=
-spawn-animals=false
-white-list=false
+spawn-animals=true
+white-list=true
 generate-structures=true
 online-mode=true
 max-build-height=256
 level-seed=
 enable-rcon=false
-motd=A Minecraft Server
+motd=Stratus UHC Worldgen
