--- a/plugins/worldgen/uhcworldgen.yml
+++ b/plugins/worldgen/uhcworldgen.yml
@@ -20,7 +20,7 @@
 ###########################################################################
 
 generators:
-  - prefix: 3k
+  - prefix: 3kp
     count: 4
     size: 3050
     nether: false
