Make OA game servers persist on round end

--- a/plugins/gameserver/gamemanager.yml
+++ b/plugins/gameserver/gamemanager.yml
@@ -43,3 +43,5 @@ component-configs:
   uhc:
     config-location: /maps/uhc/
     worlds-root: /persistent-files/uhc/worlds
+# If the server should automatically shut down after a match ends
+shutdown-after-end: false
