--- a/servers/games/server.properties
+++ b/servers/games/server.properties
@@ -12,13 +12,13 @@ difficulty=1
 spawn-monsters=true
 op-permission-level=4
 resource-pack-hash=
-announce-player-achievements=true
+announce-player-achievements=false
 pvp=true
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=20
+max-players=100
 network-compression-threshold=256
 max-world-size=29999984
 server-port=25565
@@ -36,4 +36,4 @@ online-mode=true
 max-build-height=256
 level-seed=
 enable-rcon=false
-motd=A Minecraft Server
+motd=Operation Ares Pre-Release Testing
