Disable nether and some spawning

--- a/servers/games/server.properties
+++ b/servers/games/server.properties
@@ -3,7 +3,7 @@
 spawn-protection=0
 generator-settings=
 force-gamemode=false
-allow-nether=true
+allow-nether=false
 gamemode=0
 broadcast-console-to-ops=true
 enable-query=false
@@ -24,14 +24,14 @@ max-world-size=29999984
 server-port=25565
 debug=false
 server-ip=
-spawn-npcs=true
+spawn-npcs=false
 allow-flight=true
 level-name=world
 view-distance=7
 resource-pack=
 spawn-animals=true
 white-list=false
-generate-structures=true
+generate-structures=false
 online-mode=true
 max-build-height=256
 level-seed=
